--- a/src/Components/Register/Register.module.css
+++ b/src/Components/Register/Register.module.css
@@ -1,5 +1,5 @@
 .container_register{
-   background-color: black;
+   background-color: #f9f9fa;
    width: 100%;
    height: 100vh;
    display: flex;
@@ -8,6 +8,8 @@
 
 .container_presentation{
     height: 90vh;
+    display: flex;
+    justify-content: space-around;
 }
 
 .container_copyright{
@@ -15,4 +17,95 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.container_description{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+.container_description img{
+    position: relative;
+    width: 300px;
+    top: 30px;
+    left: 30px;
+}
+.container_description p{
+    position: relative;
+    font-size: 20px;
+    padding: 80px;
+}
+
+.container_form{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.formulario{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 280px;
+    height: 400px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px rgb(126, 125, 125);
+}
+.formulario img{
+    width: 150px;
+    margin-top: -10px;
+}
+.text_form{
+    width: 200px;
+    text-align: center;
+    color: #464646;
+    font-size: 13px;
+}
+.formulario input{
+    all: initial;
+    background-color: white;
+    border: 1px solid rgb(158, 158, 158);
+    font-family: 'Poppins', sans-serif;
+    font-size: 12px;
+    width: 180px;
+    padding: 7px;
+    border-radius: 5px;
+    margin: 5px;
+}
+.formulario input:focus{
+    border: 1px solid rgb(0, 255, 234);
+}
+
+.span_text1{
+    color: black;
+    font-size: 13px;
+}
+.span_text2{
+    color: blue;
+    font-size: 13px;
+}
+.span_text2:hover{
+    cursor: pointer;
+}
+.line{
+    background-color: red;
+    width: 220px;
+    margin-bottom: 20px;
+}
+
+.button_register{
+    all: initial;
+    font-family: 'Poppins', sans-serif;
+    background-color: rgb(31, 224, 224);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    width: 180px;
+    text-align: center;
+    cursor: pointer;
+}
+.container_span{
+    margin-top: 30px;
 }
