--- a/Client/src/Components/Register/Register.module.css
+++ b/Client/src/Components/Register/Register.module.css
@@ -98,13 +98,16 @@
 .button_register{
     all: initial;
     font-family: 'Poppins', sans-serif;
-    background-color: rgb(31, 224, 224);
+    background-image: linear-gradient(150deg,#00e1ff, #009dc0);
     color: white;
     padding: 5px;
     border-radius: 5px;
     width: 180px;
     text-align: center;
     cursor: pointer;
+}
+.button_register:hover{
+    background-image: linear-gradient(150deg,#00c5e5, #037c9b);
 }
 .container_span{
     margin-top: 30px;
